@@ -7,8 +7,8 @@
  * `Revoke-HttpUrlPermission`: uses Windows API to revoke all a user or group's permissions on HTTP URLs; replaces the `netsh http delete urlacl` command.
  * `Install-Directory`: creates a directory (and any missing parents), if it doesn't exist already. Finally!
  * `Uninstall-Directory`: removes a directory, if it exists. Finally!
- * Obsolete function parameters will no longer show in Intellisense (added the `DontShow` parameter property).
  * `Uninstall-Group`: uses the `DirectoryServices.AccountManagement` .NET API to remove a group, if it exists.
+ * `Test-GroupMember`: uses the `DirectoryServices.AccountManagemetn` .NET API to test if a principal is a member of a group.
  
 ## Bug Fixes
  
@@ -24,6 +24,7 @@
  
 ## Other Improvements
 
+ * Obsolete function parameters will no longer show in Intellisense (added the `DontShow` parameter property).
  * `Test-AdminPrivilege`: changed its verbose message to a debug message.
  * `Set-HostsEntry`: 
     * only updates hosts file if it needs to change
